--- a/bananamama.html
+++ b/bananamama.html
@@ -255,7 +255,7 @@
         </div>
     </div>
     <div class="main-title-page fadeInUp wow">
-        <h2>КОЛЛЕКЦИИ</h2>
+        <h2>ФОТО</h2>
     </div>
     <div class="category-links-flex mobile-category-items fadeInUp wow">
         <div class="category-item-block">
@@ -279,7 +279,7 @@
         <a href="#">БОЛЬШЕ КОЛЛЕКЦИЙ</a>
     </div>
     <div class="main-title-page fadeInUp wow">
-        <h2>НАШИ БРЕНДЫ</h2>
+        <h2>Banana Mama</h2>
     </div>
     <div class="flex-brands-block fadeInUp wow">
         <div class="main-brand-column big-brand-column">
@@ -325,7 +325,7 @@
             <div class="category-links-text hidden-xs"><a href="#">В КАТАЛОГ</a></div>
         </div>
         <div class="advantages-text-block bounceInUp wow">
-            <div class="big-text-advantages hidden-xs">PALOMA ЭТО...</div>
+            <div class="big-text-advantages hidden-xs">Контакты</div>
             <div class="flex-advantages-text">
                 <div class="advantages-min-img">
                     <img src="images/advantages2.png" alt="" class="min-advantages-item">
@@ -546,7 +546,7 @@
         </div>
         <div class="footer-flex-item">
             <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Помощь</a></div>
-            <div class="footer-flex-item-link"><a href="#">Центр поддержки Paloma</a></div>
+            <div class="footer-flex-item-link"><a href="#">Центр поддержки</a></div>
             <div class="footer-flex-item-link"><a href="#">Как оформить заказ</a></div>
             <div class="footer-flex-item-link"><a href="#">Как выбрать размер</a></div>
             <div class="footer-flex-item-link"><a href="#">Доставка</a></div>
@@ -575,7 +575,6 @@
                 <div class="it-tehnology-text">
                     Разработка и<br>поддержка сайта
                 </div>
-                <a href="#"><img src="images/it-factory.png" alt=""></a>
             </div>
         </div>
     </div>
@@ -618,7 +617,7 @@
             </div>
             <div class="footer-flex-item">
                 <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Помощь</a></div>
-                <div class="footer-flex-item-link"><a href="#">Центр поддержки Paloma</a></div>
+                <div class="footer-flex-item-link"><a href="#">Центр поддержки</a></div>
                 <div class="footer-flex-item-link"><a href="#">Как оформить заказ</a></div>
                 <div class="footer-flex-item-link"><a href="#">Как выбрать размер</a></div>
                 <div class="footer-flex-item-link"><a href="#">Доставка</a></div>
@@ -639,7 +638,6 @@
                 <div class="it-tehnology-text">
                     Разработка и<br>поддержка сайта:
                 </div>
-                <a href="#"><img src="images/it-factory.png" alt=""></a>
             </div>
         </div>
     </div>
