--- a/bananamama.html
+++ b/bananamama.html
@@ -237,42 +237,49 @@
     </div>
 </div>
 <section class="container">
+    <div class="main-title-page fadeInUp wow animated" style="visibility: visible; animation-name: fadeInUp;">
+        <h1>BANANA MAMA</h1>
+    </div>
+    <p class="main-description">Приглашаем всех на прогулки на джипах по самым живописным местам Анапы и её окресностей. Для ценителей активного отдыха мы предлагаем путешествия на квадроциклах, дайвинг, аренду яхт, морские прогулки и полеты на параплане. Мы предложим интересные и захватывающие маршруты на любой вкус, а наши цены вас приятно удивят! Бронируйте места уже сейчас, чтобы ваш отдых запомнился вам на долгие годы!</p>
+    <div class="button-center hidden-xs fadeInUp wow animated" style="visibility: visible; animation-name: fadeInUp;">
+        <a href="#" class="main-button main-button-light">ЗАБРОНИРОВАТЬ</a>
+    </div>
     <div class="main-title-page fadeInUp wow">
         <h2>УСЛУГИ</h2>
     </div>
     <div class="category-links-flex fadeInUp wow">
         <div class="category-links-item">
-            <a href="#"><img src="images/main-links1.JPG" alt=""></a>
-            <div class="category-links-text"><a href="#">КВАДРОЦИКЛЫ</a></div>
-        </div>
-        <div class="category-links-item">
             <a href="#"><img src="images/main-links2.jpg" alt=""></a>
             <div class="category-links-text"><a href="#">ДЖИПЫ</a></div>
         </div>
         <div class="category-links-item">
+            <a href="#"><img src="images/main-links1.JPG" alt=""></a>
+            <div class="category-links-text"><a href="#">КВАДРОЦИКЛЫ</a></div>
+        </div>
+        <div class="category-links-item">
             <a href="#"><img src="images/main-links3.jpg" alt=""></a>
-            <div class="category-links-text"><a href="#">МАРШРУТЫ</a></div>
+            <div class="category-links-text"><a href="#">АКТИВНЫЙ ОТДЫХ</a></div>
         </div>
     </div>
     <div class="main-title-page fadeInUp wow">
-        <h2>ФОТО</h2>
+        <h2>МАРШРУТЫ ДЖИПИНГА</h2>
     </div>
     <div class="category-links-flex mobile-category-items fadeInUp wow">
         <div class="category-item-block">
             <img src="images/collection1.png" alt="">
-            <div class="category-text-block"><a href="#">КУПАЛЬНИКИ 2019</a></div>
+            <div class="category-text-block"><a href="#">МЕСТНАЯ КОРСИКА</a></div>
         </div>
         <div class="category-item-block">
             <img src="images/collection2.jpg" alt="">
-            <div class="category-text-block"><a href="#">КОЛЛЕКЦИЯ LITTLE</a></div>
+            <div class="category-text-block"><a href="#">КИПАРИСОВОЕ ОЗЕРО</a></div>
         </div>
         <div class="category-item-block">
             <img src="images/collection3.jpg" alt="">
-            <div class="category-text-block"><a href="#">ЖЕНСКИЕ ПИЖАМЫ</a></div>
+            <div class="category-text-block"><a href="#">ЛАСТОЧКИНЫ ГНЁЗДА, ЛЫСАЯ ГОРА</a></div>
         </div>
         <div class="category-item-block">
             <img src="images/collection4.jpg" alt="">
-            <div class="category-text-block"><a href="#">КРУЖЕВО 2019</a></div>
+            <div class="category-text-block"><a href="#">ВЕЧЕРНИЕ ПОКАТУШКИ</a></div>
         </div>
     </div>
     <div class="mobile-link-more hidden-lg hidden-md hidden-sm">
