--- a/bananamama.html
+++ b/bananamama.html
@@ -241,7 +241,7 @@
         <h1>BANANA MAMA</h1>
     </div>
     <p class="main-description">Приглашаем всех на прогулки на джипах по самым живописным местам Анапы и её окресностей. Для ценителей активного отдыха мы предлагаем путешествия на квадроциклах, дайвинг, аренду яхт, морские прогулки и полеты на параплане. Мы предложим интересные и захватывающие маршруты на любой вкус, а наши цены вас приятно удивят! Бронируйте места уже сейчас, чтобы ваш отдых запомнился вам на долгие годы!</p>
-    <div class="button-center hidden-xs fadeInUp wow animated" style="visibility: visible; animation-name: fadeInUp;">
+    <div class="button-center fadeInUp wow animated">
         <a href="#" class="main-button main-button-light">ЗАБРОНИРОВАТЬ</a>
     </div>
     <div class="main-title-page fadeInUp wow">
@@ -266,263 +266,70 @@
     </div>
     <div class="category-links-flex mobile-category-items fadeInUp wow">
         <div class="category-item-block">
-            <img src="images/collection1.png" alt="">
+            <img src="images/route1.jpg" alt="">
             <div class="category-text-block"><a href="#">МЕСТНАЯ КОРСИКА</a></div>
         </div>
         <div class="category-item-block">
-            <img src="images/collection2.jpg" alt="">
+            <img src="images/route2.jpg" alt="">
             <div class="category-text-block"><a href="#">КИПАРИСОВОЕ ОЗЕРО</a></div>
         </div>
         <div class="category-item-block">
-            <img src="images/collection3.jpg" alt="">
+            <img src="images/route3.jpg" alt="">
             <div class="category-text-block"><a href="#">ЛАСТОЧКИНЫ ГНЁЗДА, ЛЫСАЯ ГОРА</a></div>
         </div>
         <div class="category-item-block">
-            <img src="images/collection4.jpg" alt="">
+            <img src="images/route4.jpg" alt="">
             <div class="category-text-block"><a href="#">ВЕЧЕРНИЕ ПОКАТУШКИ</a></div>
         </div>
     </div>
-    <div class="mobile-link-more hidden-lg hidden-md hidden-sm">
-        <a href="#">БОЛЬШЕ КОЛЛЕКЦИЙ</a>
+    <div class="button-center fadeInUp wow animated">
+        <a href="#" class="main-button main-button-light">ОСТАВИТЬ ЗАЯВКУ</a>
     </div>
     <div class="main-title-page fadeInUp wow">
-        <h2>Banana Mama</h2>
-    </div>
-    <div class="flex-brands-block fadeInUp wow">
-        <div class="main-brand-column big-brand-column">
-            <a href="#"><img src="images/brand1.png" alt=""></a>
-        </div>
-        <div class="main-brand-column">
-            <a href="#"><img src="images/brand2.png" alt=""></a>
-            <a href="#"><img src="images/brand3.png" alt=""></a>
-        </div>
-        <div class="main-brand-column hidden-xs">
-            <a href="#"><img src="images/brand4.png" alt=""></a>
-            <a href="#"><img src="images/brand5.png" alt=""></a>
-        </div>
-        <div class="main-brand-column hidden-xs">
-            <a href="#"><img src="images/brand6.png" alt=""></a>
-            <a href="#"><img src="images/brand8.png" alt=""></a>
-        </div>
-        <div class="main-brand-column big-brand-column">
-            <a href="#" class="button-brands">ЕЩЕ БРЕНДЫ +</a>
-            <a href="#"><img src="images/brand7.png" alt=""></a>
-        </div>
-    </div>
-</section>
-<div class="grey-line-page">
-    <div class="container">
-        <div class="flex-sale-cart-block fadeInUp wow wow">
-            <div class="shares-cart-block-text">
-                <h3>Получите постоянную скидку</h3>
-                <div class="big-pencent-shares">10%</div>
-                <p>При покупке от 3 000 руб.</p>
-                <a href="#" class="main-button main-button-light">НАЧАТЬ ПОКУПКИ</a>
-            </div>
-            <div class="shares-image-block">
-                <img src="images/shares.png" alt="">
-            </div>
-        </div>
-    </div>
-</div>
-<section class="container">
-    <div class="main-advantages-block">
-        <div class="category-item-block fadeInUp wow">
-            <img src="images/advantages1.png" alt="">
-            <div class="category-links-text hidden-xs"><a href="#">В КАТАЛОГ</a></div>
-        </div>
-        <div class="advantages-text-block bounceInUp wow">
-            <div class="big-text-advantages hidden-xs">Контакты</div>
-            <div class="flex-advantages-text">
-                <div class="advantages-min-img">
-                    <img src="images/advantages2.png" alt="" class="min-advantages-item">
-                    <div class="category-links-text hidden-lg hidden-md hidden-sm"><a href="#" class="hidden-sm hidden-md hidden-lg">В КАТАЛОГ</a></div>
-                    <div class="advantages-description">
-
-                        <p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности способствует подготовке и реализации инновационных методов управления процессамми.</p>
-                        <div class="advantages-icon-flex">
-                            <div class="advantages-icon-item">
-                                <img src="images/advantages-icon1.png" alt="">
-                                <div class="advantages-icon-title">Красивое белье</div>
-                                <p>Которое придает уверенность</p>
-                            </div>
-                            <div class="advantages-icon-item">
-                                <img src="images/advantages-icon2.png" alt="">
-                                <div class="advantages-icon-title">Качество ткани</div>
-                                <p>Наше белье отличается высоким качеством</p>
-                            </div>
-                            <div class="advantages-icon-item">
-                                <img src="images/advantages-icon1.png" alt="">
-                                <div class="advantages-icon-title">Модные тенденции</div>
-                                <p>Наше белье отличается высоким качеством</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
     </div>
 
-    <div class="advantages-description-mobile">
-        <div class="big-text-advantages-mobile hidden-sm hidden-md hidden-lg">PALOMA ЭТО...</div>
-        <p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности способствует подготовке и реализации инновационных методов управления процессамми.</p>
-        <div class="advantages-icon-flex">
-            <div class="advantages-icon-item">
-                <img src="images/advantages-icon1.png" alt="">
-                <div class="advantages-icon-title">Красивое белье</div>
-                <p class="hidden-sm hidden-xs">Которое придает уверенность</p>
-            </div>
-            <div class="advantages-icon-item">
-                <img src="images/advantages-icon2.png" alt="">
-                <div class="advantages-icon-title">Качество ткани</div>
-                <p class="hidden-sm hidden-xs">Наше белье отличается высоким качеством</p>
-            </div>
-            <div class="advantages-icon-item">
-                <img src="images/advantages-icon1.png" alt="">
-                <div class="advantages-icon-title">Модные тенденции</div>
-                <p class="hidden-sm hidden-xs">Наше белье отличается высоким качеством</p>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="grey-line-page grey-line-page-flower fadeInUp wow">
-    <div class="flower-left-absolute">
-        <img src="images/flower-left.png" alt="">
-    </div>
-    <div class="flower-right-absolute hidden-lg hidden-md">
-        <img src="images/flower-menu.png" alt="">
-    </div>
-    <div class="container">
-        <div class="flex-sale-cart-block flex-follow-block">
-            <div class="shares-cart-block-text">
-                <h3>Подпишитесь на рассылку</h3>
-                <p>И получайте напоминания о <span class="bold-text">скидках и акциях</span>, а также персональные предложения</p>
-                <div class="follow-block-flex">
-                    <input type="text" placeholder="Ваш E-mail">
-                    <a href="#" class="main-button main-button-light hidden-sm hidden-xs">ПОДПИСАТЬСЯ</a>
-                </div>
-            </div>
-            <div class="shares-image-block hidden-sm hidden-xs">
-                <img src="images/monitor.png" alt="">
-            </div>
-        </div>
-    </div>
-</section>
-<section class="container">
     <div class="main-title-page fadeInUp wow">
-        <h2>НОВОСТИ В БЛОГЕ</h2>
+        <h2>ВИДЕО</h2>
     </div>
-    <div class="main-blog-flex bounceInUp wow">
-        <div class="blog-main-item">
-            <div class="main-blog-item-img">
-                <img src="images/main-blog1.jpg" alt="">
-            </div>
-            <div class="main-blog-item-title">
-                <a href="#">Из истории брендов BIP-BIP и MILLE BIP-BIP...</a>
-            </div>
-            <div class="main-blog-item-date">
-                13.03.19
-            </div>
-            <div class="main-blog-item-link">
-                <a href="#">Подробнее</a>
-            </div>
-        </div>
-        <div class="blog-main-item">
-            <div class="main-blog-item-img">
-                <img src="images/main-blog2.jpg" alt="">
-            </div>
-            <div class="main-blog-item-title">
-                <a href="#">Из истории брендов BIP-BIP и MILLE BIP-BIP...</a>
-            </div>
-            <div class="main-blog-item-date">
-                13.03.19
-            </div>
-            <div class="main-blog-item-link">
-                <a href="#">Подробнее</a>
-            </div>
-        </div>
-        <div class="blog-main-item hidden-xs">
-            <div class="main-blog-item-img">
-                <img src="images/main-blog3.jpg" alt="">
-            </div>
-            <div class="main-blog-item-title">
-                <a href="#">Из истории брендов BIP-BIP и MILLE BIP-BIP...</a>
-            </div>
-            <div class="main-blog-item-date">
-                13.03.19
-            </div>
-            <div class="main-blog-item-link">
-                <a href="#">Подробнее</a>
-            </div>
-        </div>
-    </div>
+
     <div class="button-center hidden-xs fadeInUp wow">
         <a href="#" class="main-button main-button-light">ПОДПИСАТЬСЯ</a>
     </div>
-    <div class="button-center hidden-sm hidden-md hidden-lg fadeInUp wow">
-        <a href="#" class="main-button main-button-light">ВСЕ НОВОСТИ</a>
-    </div>
     <div class="main-title-page fadeInUp wow">
-        <h2>ФОТО ИЗ INSTAGRAM</h2>
+        <h2>ФОТО</h2>
     </div>
-    <div class="flex-instagram hidden-xs fadeInUp wow">
+    <div class="flex-instagram fadeInUp wow">
         <div class="first-instagram-item">
             <div class="instagram-item">
-                <a href="#"><img src="images/insta1.jpg" alt=""></a>
+                <a href="#"><img src="images/foto1.jpg" alt=""></a>
             </div>
         </div>
         <div class="masonry-instagram">
             <div class="instagram-column">
                 <div class="instagram-item">
-                    <a href="#"><img src="images/insta2.jpg" alt=""></a>
+                    <a href="#"><img src="images/foto2.jpg" alt=""></a>
                 </div>
                 <div class="instagram-item">
-                    <a href="#"><img src="images/insta3.jpg" alt=""></a>
+                    <a href="#"><img src="images/foto3.jpg" alt=""></a>
                 </div>
             </div>
             <div class="instagram-column">
                 <div class="instagram-item">
-                    <a href="#"><img src="images/insta4.jpg" alt=""></a>
+                    <a href="#"><img src="images/foto4.jpg" alt=""></a>
                 </div>
                 <div class="instagram-item">
-                    <a href="#"><img src="images/insta5.jpg" alt=""></a>
+                    <a href="#"><img src="images/foto5.jpg" alt=""></a>
                 </div>
             </div>
             <div class="instagram-column">
                 <div class="instagram-item">
-                    <a href="#"><img src="images/insta6.jpg" alt=""></a>
+                    <a href="#"><img src="images/foto6.jpg" alt=""></a>
                 </div>
                 <div class="instagram-item">
-                    <a href="#"><img src="images/insta7.jpg" alt=""></a>
+                    <a href="#"><img src="images/foto7.jpg" alt=""></a>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="flex-instagram flex-instagram-mobile hidden-lg hidden-md hidden-sm">
-        <div class="instagram-item">
-            <a href="#"><img src="images/insta1.jpg" alt=""></a>
-        </div>
-        <div class="instagram-column">
-            <div class="instagram-item">
-                <a href="#"><img src="images/insta2.jpg" alt=""></a>
-            </div>
-            <div class="instagram-item">
-                <a href="#"><img src="images/insta3.jpg" alt=""></a>
-            </div>
-        </div>
-        <div class="instagram-item instagram-item-last">
-            <a href="#"><img src="images/insta4.jpg" alt=""></a>
-        </div>
-    </div>
-    <div class="flex-instagram flex-instagram-mobile-last hidden-lg hidden-md hidden-sm">
-        <div class="instagram-item">
-            <a href="#"><img src="images/insta6.jpg" alt=""></a>
-        </div>
-        <div class="instagram-item">
-            <a href="#"><img src="images/insta2-mob.jpg" alt=""></a>
-        </div>
-        <div class="instagram-item">
-            <a href="#"><img src="images/insta3-mob.jpg" alt=""></a>
         </div>
     </div>
 </section>
