--- a/bananamama.html
+++ b/bananamama.html
@@ -334,145 +334,46 @@
     </div>
 </section>
 <footer class="footer-grey">
-    <div class="footer-flex-block hidden-sm hidden-xs">
-        <div class="footer-flex-item">
-            <div class="footer-logo">
-                <a href="#"><img src="images/footer-logo.png" alt=""></a>
-            </div>
-            <div class="footer-copyright">
-                Все права защищены <i class="fa fa-copyright" aria-hidden="true"></i><br>
-                2019
-            </div>
-            <div class="footer-social-flex">
-                <a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-odnoklassniki-square" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-            </div>
-        </div>
-        <div class="footer-flex-item">
-            <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Информация о компании</a></div>
-            <div class="footer-flex-item-link"><a href="#">О Paloma</a></div>
-            <div class="footer-flex-item-link"><a href="#">Контакты</a></div>
-            <div class="footer-flex-item-link"><a href="#">Fashion-блог Paloma</a></div>
-        </div>
-        <div class="footer-flex-item">
-            <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Помощь</a></div>
-            <div class="footer-flex-item-link"><a href="#">Центр поддержки</a></div>
-            <div class="footer-flex-item-link"><a href="#">Как оформить заказ</a></div>
-            <div class="footer-flex-item-link"><a href="#">Как выбрать размер</a></div>
-            <div class="footer-flex-item-link"><a href="#">Доставка</a></div>
-            <div class="footer-flex-item-link"><a href="#">Возврат товара</a></div>
-            <div class="footer-flex-item-link"><a href="#">Политика конфиденциальности</a></div>
-        </div>
-        <div class="footer-flex-item">
-            <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Каталог</a></div>
-            <div class="footer-flex-item-link"><a href="#">Женщинам</a></div>
-            <div class="footer-flex-item-link"><a href="#">Мужчинам</a></div>
-            <div class="footer-flex-item-link"><a href="#">Детям</a></div>
-        </div>
-        <div class="footer-flex-item">
-            <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Подписка на новости</a></div>
-            <div class="footer-follow border-footer">
-                <input type="text" placeholder="Ваш e-mail" class="footer-input">
-                <img src="images/send.png" alt="">
-            </div>
-        </div>
-        <div class="footer-flex-item">
-            <div class="last-links-footer">
-                <div class="footer-flex-item-link footer-flex-item-link-title"><a href="tel:88005000759">8 800 5000 759</a></div>
-                <div class="footer-flex-item-link border-footer"><a href="#">Обратный звонок</a></div>
-            </div>
-            <div class="it-tehnology">
-                <div class="it-tehnology-text">
-                    Разработка и<br>поддержка сайта
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="footer-mobile hidden-md hidden-lg hidden-xs">
-        <div class="footer-logo">
-            <a href="#"><img src="images/footer-logo.png" alt=""></a>
-        </div>
-        <div class="footer-copyright">
-            Все права защищены <i class="fa fa-copyright" aria-hidden="true"></i> 2019
-        </div>
-        <div class="mobile-footer-links-flex">
+    <div class="container">
+        <div class="footer-flex-block">
             <div class="footer-flex-item">
-                <div class="mobile-block-links">
-                    <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Каталог</a></div>
-                    <div class="footer-flex-item-link"><a href="#">Женщинам</a></div>
-                    <div class="footer-flex-item-link"><a href="#">Мужчинам</a></div>
-                    <div class="footer-flex-item-link"><a href="#">Детям</a></div>
+                <div class="footer-logo">
+                    <a href="#"><img src="images/logo.png" alt=""></a>
                 </div>
-                <div class="mobile-block-links tablet-padding-footer">
-                    <div class="last-links-footer">
-                        <div class="footer-flex-item-link footer-flex-item-link-title"><a href="tel:88005000759">8 800 5000 759</a></div>
-                        <div class="footer-flex-item-link border-footer"><a href="#">Обратный звонок</a></div>
+                <div class="footer-copyright">
+                    Banana Mama, 2019
+                </div>
+            </div>
+            <div class="footer-flex-item">
+                <div class="footer-flex-item-link"><a href="#">О нас</a></div>
+                <div class="footer-flex-item-link"><a href="#">Услуги</a></div>
+                <div class="footer-flex-item-link"><a href="#">Контакты</a></div>
+            </div>
+            <div class="footer-flex-item">
+                <div class="footer-flex-item-link"><a href="#">Маршруты</a></div>
+                <div class="footer-flex-item-link"><a href="#">Фотоотчеты</a></div>
+                <div class="footer-flex-item-link"><a href="#">Видео</a></div>
+            </div>
+            <div class="footer-flex-item">
+                <div class="last-links-footer">
+                    <div class="footer-flex-item-link footer-flex-item-link-title">
+                        <a href="tel:+79883190857">8 988 319 08 57</a>
+                    </div>
+                    <div class="footer-flex-item-link footer-flex-item-link-title"><a href="mailto:karataeva.olga2015@yandex.ru">karataeva.olga2015@yandex.ru</a></div>
+                    <div class="footer-social-flex">
+                        <a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-odnoklassniki-square" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                     </div>
                 </div>
-            </div>
-            <div class="footer-flex-item">
-                <div class="mobile-block-links">
-                    <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Информация о компании</a></div>
-                    <div class="footer-flex-item-link"><a href="#">О Paloma</a></div>
-                    <div class="footer-flex-item-link"><a href="#">Контакты</a></div>
-                    <div class="footer-flex-item-link"><a href="#">Fashion-блог Paloma</a></div>
-                </div>
-                <div class="mobile-block-links tablet-padding-footer">
-                    <div class="mobile-block-links">
-                        <div class="footer-links-follow-news news-border-bottom-mobile">
-                            <a href="#">Подписка на новости</a>
-                        </div>
+                <div class="it-tehnology">
+                    <div class="it-tehnology-text">
+                        Разработано <a href="https://tetris-studio.ru" target="_blank">Tetris Studio</a>
                     </div>
                 </div>
-            </div>
-            <div class="footer-flex-item">
-                <div class="footer-flex-item-link footer-flex-item-link-title"><a href="#">Помощь</a></div>
-                <div class="footer-flex-item-link"><a href="#">Центр поддержки</a></div>
-                <div class="footer-flex-item-link"><a href="#">Как оформить заказ</a></div>
-                <div class="footer-flex-item-link"><a href="#">Как выбрать размер</a></div>
-                <div class="footer-flex-item-link"><a href="#">Доставка</a></div>
-                <div class="footer-flex-item-link"><a href="#">Возврат товара</a></div>
-                <div class="footer-flex-item-link"><a href="#">Политика конфиденциальности</a></div>
-            </div>
-        </div>
-        <div class="tablet-social-footer">
-            <div class="modal-social-flex">
-                <a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-odnoklassniki-square" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-            </div>
-            <div class="it-tehnology">
-                <div class="it-tehnology-text">
-                    Разработка и<br>поддержка сайта:
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="footer-min-mobile hidden-lg hidden-md hidden-sm">
-        <div class="min-footer-brand">Paloma <i class="fa fa-copyright" aria-hidden="true"></i> 2019</div>
-        <div class="footer-flex-item-link footer-flex-item-link-title"><a href="tel:88005000759">8 800 5000 759</a></div>
-        <div class="footer-flex-item-link border-footer"><a href="#">Обратный звонок</a></div>
-        <div class="it-tehnology">
-            <div class="it-tehnology-text">
-                Разработка и поддержка сайта:
-            </div>
-            <a href="#"><img src="images/it-factory.png" alt=""></a>
-        </div>
-        <div class="tablet-social-footer">
-            <div class="modal-social-flex">
-                <a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-odnoklassniki-square" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
