--- a/bananamama.html
+++ b/bananamama.html
@@ -242,7 +242,7 @@
     </div>
     <p class="main-description">Приглашаем всех на прогулки на джипах по самым живописным местам Анапы и её окресностей. Для ценителей активного отдыха мы предлагаем путешествия на квадроциклах, дайвинг, аренду яхт, морские прогулки и полеты на параплане. Мы предложим интересные и захватывающие маршруты на любой вкус, а наши цены вас приятно удивят! Бронируйте места уже сейчас, чтобы ваш отдых запомнился вам на долгие годы!</p>
     <div class="button-center fadeInUp wow animated">
-        <a href="#" class="main-button main-button-light">ЗАБРОНИРОВАТЬ</a>
+        <a href="#" class="main-button main-button-light">ЗАБРОНИРОВАТЬ МЕСТА</a>
     </div>
     <div class="main-title-page fadeInUp wow">
         <h2>УСЛУГИ</h2>
@@ -262,7 +262,7 @@
         </div>
     </div>
     <div class="main-title-page fadeInUp wow">
-        <h2>МАРШРУТЫ ДЖИПИНГА</h2>
+        <h2>МАРШРУТЫ ДЖИППИНГА</h2>
     </div>
     <div class="category-links-flex mobile-category-items fadeInUp wow">
         <div class="category-item-block">
@@ -288,7 +288,21 @@
     <div class="main-title-page fadeInUp wow">
         <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
     </div>
-
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> У нас самые живописные маршруты и дружелюбные водители.
+    </div>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Мы покажем вам самые незабываемые места Анапы и её окресностей - природные красоты и обзорные площадки на курортный город.
+    </div>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Для любителей экстрима мы предлагаем дайвинг, аренду яхт, морские прогулки и полеты на параплане.
+    </div>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Посещаем все достопримечательности Анапы (Лысая гора, Ласточкины гнезда, Святой поклонный крест, источник и храм Святой Варвары, древний замок, радиолокационные шары, выставку старинных русских колоколов и единственное озеро в России, где 33 кипариса, занесенных в Красную книгу. Такие деревья растут прямо из воды, такие деревья растут в 2-х местах на всей планете.
+    </div>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Вечернее барбекю, которое полностью организовывает наша фирма(стол,стулья,мангал,мясо, все за наш счет)с профессиональной музыкой.
+    </div>
     <div class="main-title-page fadeInUp wow">
         <h2>ВИДЕО</h2>
     </div>
