--- a/bananamama.html
+++ b/bananamama.html
@@ -216,7 +216,9 @@
                     <input type="text" placeholder="Телефон">
                     <input type="text" placeholder="email">
                     <textarea rows="5" placeholder="Напишите сообщение"></textarea>
-                    <a href="#">Отправить заявку</a>
+                    <div class="button-center">
+                        <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
+                    </div>
                 </div>
             </div>
         </div>
