--- a/bananamama.html
+++ b/bananamama.html
@@ -39,7 +39,7 @@
             <div class="logo-header">
                 <a href="/"><img src="images/logo.png" alt=""></a>
             </div>
-            <div class="header-icons">
+            <div class="header-icons hidden-xs">
                 <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ОСТАВИТЬ ЗАЯВКУ</a>
             </div>
         </div>
